Fix horizontal spacing in tooltips

--- a/styles/app.less
+++ b/styles/app.less
@@ -493,7 +493,6 @@ li, p {
 	> span,
 	> canvas {
 		vertical-align: middle;
-		display: inline-block;
 	}
 
 	> canvas {
